# geodalib

./: .gitignore  404.html  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  api-examples.html  api-overview.html  architecture.html  get-started.html  hashmap.json  index.html
.github/: pull_request_template.md
cpp/: .clang-format  CMakeLists.txt  CPPLINT.cfg  README.md
cpp/examples/: deviation_example.cpp
cpp/js/: esbuild.config.ts  tsconfig.json
cpp/js/src/: init.ts
cpp/js/src/geometry/: point-layer-geometry.ts
cpp/js/src/mapping/: box-breaks.ts  equal-interval-breaks.ts  percentile-breaks.ts  quantile.ts  stddev-breaks.ts
cpp/js/src/sa/: local-g.ts  local-moran.ts  quantile-lisa.ts  spatial-lag.ts
cpp/js/test/: data.ts  geometry-data.ts  index.ts
cpp/js/test/geometry/: binary-geometry.test.ts
cpp/js/test/mapping/: box-breaks.test.ts  equal-interval-breaks.test.ts  percentile-breaks.test.ts
cpp/js/test/regression/: spatial-lag.test.ts
cpp/js/test/weights/: distance-neighbors.test.ts
cpp/js/wasm/: geoda.wasm  index.cjs
cpp/scripts/: build-wasm.sh  run-tests.sh
cpp/src/: CMakeLists.txt
cpp/src/data/: data.h  deviation.cpp  mad.cpp  range_adjust.cpp  range_standardize.cpp  standardize.cpp
cpp/src/features/: geometry-collection.cpp  geometry-collection.h  geometry.cpp  geometry.h
cpp/src/geometry/: cartogram.cpp  cartogram.h  geometry.cpp  geometry.h  line.cpp  line.h  mst.cpp  mst.h  point.cpp  point.h  polygon.cpp  polygon.h  spatial-dissolve.cpp  spatial-dissolve.h  spatial-join.cpp  spatial-join.h  thiessen-polygon.cpp  thiessen-polygon.h
cpp/src/lisa/: BatchLISA.cpp  BatchLISA.h  BatchLocalMoran.cpp  BatchLocalMoran.h  BiLocalMoran.cpp  BiLocalMoran.h  GeoDaSet.h  LISA.cpp  LISA.h  MultiGeary.cpp  MultiGeary.h  MultiJoinCount.cpp  MultiJoinCount.h  UniG.cpp  UniG.h  UniGeary.cpp  UniGeary.h  UniGstar.cpp  UniGstar.h  UniJoinCount.cpp  UniJoinCount.h  UniLocalMoran.cpp  UniLocalMoran.h
cpp/src/mapping/: box-breaks.cpp  equal-interval-breaks.cpp  mapping.cpp  mapping.h  natural-breaks.cpp  percentile-breaks.cpp  quantile-breaks.cpp  rates-map.cpp  stddev-breaks.cpp
cpp/src/operations/: centroids.cpp  count.cpp  join.cpp  operations.h  union.cpp
cpp/src/regression/: DenseMatrix.cpp  DenseMatrix.h  Link.h  ML_im.cpp  ML_im.h  PowerLag.cpp  PowerLag.h  PowerSymLag.cpp  PowerSymLag.h  SparseMatrix.cpp  SparseMatrix.h  SparseRow.cpp  SparseRow.h  SparseVector.cpp  SparseVector.h  Weights.cpp  Weights.h  dense-vector.cpp  dense-vector.h  diagnostic-report.cpp  diagnostic-report.h  lite2.h  mix.cpp  mix.h  polym.h  reg-utils.h  regression.cpp  regression.h  smile.h  smile2.cpp
cpp/src/sa/: lisa-api.h  local-g.cpp  local-geary.cpp  local-moran.cpp  quantile-lisa.cpp
cpp/src/statistics/: local-moran.cpp  local-statistics.cpp  local-statistics.h
cpp/src/utils/: UTM.h  data.h  deviation.h  jc_voronoi.h  mad.h  range_adjust.h  range_standardize.h  rnd.h  standardize.h
cpp/src/weights/: contiguity-weights.cpp  distance-weights.cpp  distance-weights.h  gal.h  geoda-weight.cpp  geoda-weight.h  nearest-neighbors.cpp  nearest-neighbors.h  partition.h  vector-weight.cpp  vector-weight.h  weights.h
cpp/test/: CMakeLists.txt  data.h  test-buffer.cpp  test-count.cpp  test-join-crosses.cpp  test-join-equals.cpp  test-join-intersects.cpp  test-join-overlaps.cpp  test-join-touches.cpp  test-join-within.cpp  test-mad.cpp  test-operations.cpp  test-regression.cpp  test-statistics.cpp  test-union.cpp  test-weights.cpp  test_cartogram.cpp  test_deviation.cpp  test_range_adjust.cpp  test_range_standardize.cpp  test_spatial_dissolve_fix.cpp  test_thiessen_polygon.cpp
cpp/wasm/: CMakeLists.txt  build-wasm.sh  wasm-core.cpp  wasm-lisa.cpp  wasm-regression.cpp  wasm-wrapper.cpp  wasm.cpp
src/: CMakeLists.txt  CPPLINT.cfg
src/cpp/: CMakeLists.txt  README.md
src/cpp/geometry/: geometry.cpp  geometry.h  spatial-join.cpp  spatial-join.h
src/cpp/lisa/: BatchLISA.cpp  BatchLocalMoran.cpp  BiLocalMoran.cpp  BiLocalMoran.h  GeoDaSet.h  LISA.cpp  LISA.h  MultiGeary.cpp  MultiGeary.h  MultiJoinCount.h  UniGeary.cpp  UniGeary.h  UniGstar.cpp  UniJoinCount.cpp  UniJoinCount.h  UniLocalMoran.cpp  UniLocalMoran.h
src/cpp/mapping/: box-breaks.cpp  equal-interval-breaks.cpp  mapping.h  natural-breaks.cpp  percentile-breaks.cpp  quantile-breaks.cpp
src/cpp/regression/: DiagnosticReport.cpp  DiagnosticReport.h  ML_im.cpp  PowerLag.cpp  PowerLag.h  PowerSymLag.h  SparseMatrix.cpp  SparseMatrix.h  SparseRow.h  SparseVector.cpp  Weights.h  dense-vector.cpp  dense-vector.h  diagnostic-report.cpp  diagnostic-report.h  linear-regression.cpp  lite2.h  mix.cpp  mix.h  polym.h  reg-utils.h  regression.cpp  regression.h  smile2.cpp
src/cpp/sa/: lisa-api.h  lisa.cpp  lisa.h  local-g.cpp  local-geary.cpp  local-moran.cpp  quantile-lisa.cpp
src/cpp/utils/: UTM.h
src/cpp/weights/: contiguity-weights.cpp  distance-weights.cpp  gal.h  weights.h
src/js/: .eslintrc.cjs  .prettierrc.cjs  esbuild.config.ts  package.json
src/js/build-config/: build.ts
src/js/src/: index.ts  init.ts  utils.ts
src/js/src/geometry/: binary-geometry.ts  geojson-geometry.ts  spatial-join.ts
src/js/src/mapping/: box-breaks.ts  equal-interval-breaks.ts  natural-breaks.ts  percentile-breaks.ts  quantile.ts  stddev-breaks.ts
src/js/src/regression/: linear-regression.ts  spatial-error.ts  spatial-lag.ts
src/js/src/sa/: local-g.ts  local-geary.ts  local-moran.ts  quantile-lisa.ts  rates.ts
src/js/src/weights/: contiguity-neighbors.ts  weights-stats.ts
src/js/test/: geometry-data.ts  index.ts
src/js/test/geometry/: binary-geometry.test.ts  spatial-join.test.ts
src/js/test/mapping/: equal-interval-breaks.test.ts  quantile.test.ts
src/js/test/regression/: linear-regression.test.ts  spatial-lag.test.ts
src/js/test/sa/: local-g.test.ts  local-geary.test.ts  local-moran.test.ts  quantile-lisa.test.ts  rates.test.ts
src/js/wasm/: geoda.wasm  index.cjs  index.d.ts
src/test/: CMakeLists.txt  data.h  test-regression.cpp  test-weights.cpp
src/wasm/: CMakeLists.txt  build-wasm.sh  wasm.cpp
(+1799 files in other folders)
